[package]
description = "WASM Interpreter"
name = "wasm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
ethereum-types = "0.9.2"
log = "0.4"
parity-wasm = "0.31"
libc = "0.2"
pwasm-utils = "0.6.2"
vm = { path = "../vm" }
wasmi = "0.3.0"
hex = "0.4"
cmake = "0.1.44"
evmc-client = { git = "https://github.com/second-state/evmc", tag = "v6.3.1-rust-evmc-client-rc.2" }

[dev-dependencies]
env_logger = "0.5"
