[package]
description = "Fetch current ETH price"
repository = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "price-info"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1"
log = "0.4"
parity-runtime = "0.1.1"
serde_json = "1.0"

[dev-dependencies]
parity-runtime = { version = "0.1.1", features = ["test-helpers"] }
